; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_lpc.c_FLAC__lpc_compute_best_order.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_lpc.c_FLAC__lpc_compute_best_order.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FLAC__lpc_compute_best_order(double* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca double*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca double, align 8
  %13 = alloca double, align 8
  %14 = alloca double, align 8
  store double* %0, double** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ugt i32 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @FLAC__ASSERT(i32 %17)
  %19 = load i32, i32* %7, align 4
  %20 = icmp ugt i32 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @FLAC__ASSERT(i32 %21)
  %23 = load i32, i32* %7, align 4
  %24 = uitofp i32 %23 to double
  %25 = fdiv double 5.000000e-01, %24
  store double %25, double* %14, align 8
  store i32 0, i32* %11, align 4
  store double 0x41EFFFFFFFE00000, double* %13, align 8
  store i32 0, i32* %10, align 4
  store i32 1, i32* %9, align 4
  br label %26

26:                                               ; preds = %55, %4
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %6, align 4
  %29 = icmp ult i32 %27, %28
  br i1 %29, label %30, label %60

30:                                               ; preds = %26
  %31 = load double*, double** %5, align 8
  %32 = load i32, i32* %10, align 4
  %33 = zext i32 %32 to i64
  %34 = getelementptr inbounds double, double* %31, i64 %33
  %35 = load double, double* %34, align 8
  %36 = load double, double* %14, align 8
  %37 = call double @FLAC__lpc_compute_expected_bits_per_residual_sample_with_error_scale(double %35, double %36)
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %9, align 4
  %40 = sub i32 %38, %39
  %41 = uitofp i32 %40 to double
  %42 = fmul double %37, %41
  %43 = load i32, i32* %9, align 4
  %44 = load i32, i32* %8, align 4
  %45 = mul i32 %43, %44
  %46 = uitofp i32 %45 to double
  %47 = fadd double %42, %46
  store double %47, double* %12, align 8
  %48 = load double, double* %12, align 8
  %49 = load double, double* %13, align 8
  %50 = fcmp olt double %48, %49
  br i1 %50, label %51, label %54

51:                                               ; preds = %30
  %52 = load i32, i32* %10, align 4
  store i32 %52, i32* %11, align 4
  %53 = load double, double* %12, align 8
  store double %53, double* %13, align 8
  br label %54

54:                                               ; preds = %51, %30
  br label %55

55:                                               ; preds = %54
  %56 = load i32, i32* %10, align 4
  %57 = add i32 %56, 1
  store i32 %57, i32* %10, align 4
  %58 = load i32, i32* %9, align 4
  %59 = add i32 %58, 1
  store i32 %59, i32* %9, align 4
  br label %26

60:                                               ; preds = %26
  %61 = load i32, i32* %11, align 4
  %62 = add i32 %61, 1
  ret i32 %62
}

declare dso_local i32 @FLAC__ASSERT(i32) #1

declare dso_local double @FLAC__lpc_compute_expected_bits_per_residual_sample_with_error_scale(double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
